--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,192 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  /* font-family: 'Pushster', cursive; */
+  font-family: "Roboto", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  max-width: 100vw;
   min-height: 100vh;
+  background: linear-gradient(
+    to right bottom,
+    rgb(94, 182, 253),
+    rgb(190, 224, 252)
+  );
+}
+.App {
+  margin: auto;
+}
+.app-header {
+  display: flex;
+  width: 50%;
+  margin: auto;
+  justify-content: center;
+  padding: 1rem;
+}
+.app-title {
+  font-family: "Pushster", cursive;
+  font-size: 3rem;
+  margin: 0.5rem;
+}
+.logo {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+}
+
+/*LOGIN SECTION*/
+.login-section {
+  width: 400px;
+  height: 200px;
+  margin: 3rem auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  background: linear-gradient(
+    to right bottom,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0.3)
+  );
+  box-shadow: 8px 8px 30px 15px rgb(116, 192, 253);
 }
 
-.App-link {
-  color: #61dafb;
+.username-input {
+  width: 250px;
+  margin-left: 1rem;
+  border: none;
+  border-radius: 2px;
+  font-size: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-btn {
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem 2rem;
+  background-color: rgb(52, 159, 247);
+  transition: all 0.2s;
+}
+
+.login-btn:hover {
+  background-color: royalblue;
+  transform: scale(1.03);
+  cursor: pointer;
+}
+
+/*CHAT SECTION*/
+li {
+  list-style-type: none;
+}
+.chat-section {
+  width: 800px;
+  height: 500px;
+  margin: 3rem auto;
+  padding: 1rem;
+  display: flex;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  background: linear-gradient(
+    to right bottom,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0.3)
+  );
+  box-shadow: 8px 8px 30px 15px rgb(116, 192, 253);
+}
+
+.members-area {
+  flex-basis: 20%;
+  border-right: rgb(116, 192, 253) solid 3px;
+}
+
+.members-num {
+  padding-bottom: 0.5rem;
+  color: rgb(46, 46, 46);
+  font-size: 0.8rem;
+}
+.online-members li::before {
+  content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: rgb(1, 255, 1); /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
+
+.online-member {
+  color: black;
+  font-size: 1rem;
+}
+
+.chat-area {
+  flex-basis: 80%;
+}
+
+.messages-section {
+  overflow-y: scroll;
+  height: 90%;
+}
+
+.messages-section::-webkit-scrollbar {
+  width: 5px;
+}
+
+.messages-section::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 100px;
+}
+
+.messages-section::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  border: 6px solid rgba(0, 0, 0, 0.18);
+  border-left: 0;
+  border-right: 0;
+  background-color: rgb(116, 192, 253);
+}
+
+.history-messages {
+  margin-left: 0;
+  font-size: 1rem;
+}
+
+.message {
+  margin: 1rem auto 0 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  width: fit-content;
+  max-width: 500px;
+  word-wrap: break-word;
+}
+
+.history-message {
+  background-color: rgb(204, 204, 204);
+}
+
+.messages-list {
+  margin: auto 0 auto auto;
+  font-size: 1rem;
+}
+
+.current-member {
+  margin: 1rem 0.5rem 0 auto;
+  color: aliceblue;
+  background-color: rgb(94, 182, 253);
+}
+
+.other-member {
+  color: aliceblue;
+  background-color: rgb(55, 56, 56);
+}
+
+/*INPUT AREA*/
+.message-input {
+  margin: 1rem auto 0 2rem;
+  width: 300px;
+  padding: 0.2rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
 }
