--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  /* font-family: 'Pushster', cursive; */
   font-family: "Roboto", sans-serif;
 }
-
 body {
   max-width: 100vw;
   min-height: 100vh;
@@ -63,7 +61,6 @@ body {
   );
   box-shadow: 8px 8px 30px 15px rgb(116, 192, 253);
 }
-
 .username-input {
   width: 250px;
   margin-left: 1rem;
@@ -71,7 +68,6 @@ body {
   border-radius: 2px;
   font-size: 1rem;
 }
-
 .login-btn {
   font-size: 1rem;
   border: none;
@@ -80,7 +76,6 @@ body {
   background-color: rgb(52, 159, 247);
   transition: all 0.2s;
 }
-
 .login-btn:hover {
   background-color: royalblue;
   transform: scale(1.03);
@@ -106,49 +101,41 @@ li {
   );
   box-shadow: 8px 8px 30px 15px rgb(116, 192, 253);
 }
-
 .members-area {
   flex-basis: 20%;
   border-right: rgb(116, 192, 253) solid 3px;
 }
-
 .members-num {
   padding-bottom: 0.5rem;
   color: rgb(46, 46, 46);
   font-size: 0.8rem;
 }
 .online-members li::before {
-  content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: rgb(1, 255, 1); /* Change the color */
-  font-weight: bold; /* If you want it to be bold */
-  display: inline-block; /* Needed to add space between the bullet and the text */
-  width: 1em; /* Also needed for space (tweak if needed) */
-  margin-left: -1em; /* Also needed for space (tweak if needed) */
+  content: "\2022";
+  color: rgb(1, 255, 1);
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
 }
-
 .online-member {
   color: black;
   font-size: 1rem;
 }
-
 .chat-area {
   flex-basis: 80%;
 }
-
 .messages-section {
   overflow-y: scroll;
   height: 90%;
 }
-
 .messages-section::-webkit-scrollbar {
   width: 5px;
 }
-
 .messages-section::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 100px;
 }
-
 .messages-section::-webkit-scrollbar-thumb {
   border-radius: 100px;
   border: 6px solid rgba(0, 0, 0, 0.18);
@@ -156,12 +143,10 @@ li {
   border-right: 0;
   background-color: rgb(116, 192, 253);
 }
-
 .history-messages {
   margin-left: 0;
   font-size: 1rem;
 }
-
 .message {
   margin: 1rem auto 0 0.5rem;
   padding: 0.5rem;
@@ -171,27 +156,22 @@ li {
   word-wrap: break-word;
   font-weight: 400;
 }
-
 .history-message {
   background-color: rgb(204, 204, 204);
 }
-
 .messages-list {
   margin: auto 0 auto auto;
   font-size: 1rem;
 }
-
 .current-member {
   margin: 1rem 0.5rem 0 auto;
   color: aliceblue;
   background-color: rgb(94, 182, 253);
 }
-
 .other-member {
   color: aliceblue;
   background-color: rgb(78, 78, 78);
 }
-
 .message-time {
   color: aliceblue;
   font-size: 0.7rem;
@@ -208,7 +188,6 @@ li {
   display: flex;
   align-items: center;
 }
-
 .message-input {
   margin: auto;
   margin-left: 2rem;
@@ -218,7 +197,6 @@ li {
   border: none;
   border-radius: 5px;
 }
-
 .send-message-btn {
   border: none;
   background-color: transparent;
@@ -226,15 +204,12 @@ li {
   margin-left: 1rem;
   cursor: pointer;
 }
-
 .heart {
   cursor: pointer;
 }
-
 .grey-heart {
   color: rgb(163, 163, 163);
 }
-
 .red-heart {
   color: red;
 }
