--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,10 @@ li {
 .online-member {
   color: black;
   font-size: 1rem;
+  max-width: 120px;
+  word-wrap: break-word;
 }
+
 .chat-area {
   flex-basis: 80%;
 }
@@ -148,7 +151,7 @@ li {
   font-size: 1rem;
 }
 .message {
-  margin: 1rem auto 0 0.5rem;
+  margin-top: 1rem;
   padding: 0.5rem;
   border-radius: 10px;
   width: fit-content;
@@ -170,6 +173,7 @@ li {
   border-top-right-radius: 0;
 }
 .other-member {
+  margin: 1rem auto 0 -2rem;
   color: aliceblue;
   background-color: rgb(78, 78, 78);
   border-top-left-radius: 0;
@@ -213,4 +217,110 @@ li {
 }
 .red-heart {
   color: red;
+}
+
+/*MEDIA QUERIES*/
+@media (max-width: 850px) {
+  .online-members {
+    margin-left: -1rem;
+  }
+  .chat-section {
+    width: 600px;
+    height: 400px;
+  }
+  .messages-section {
+    height: 85%;
+  }
+  .message {
+    max-width: 300px;
+  }
+  .online-member {
+    max-width: 80px;
+    word-wrap: break-word;
+  }
+}
+@media (max-width: 768px) {
+  .online-member {
+    max-width: 60px;
+    word-wrap: break-word;
+  }
+  .chat-section {
+    width: 420px;
+    height: 400px;
+    margin: 1rem auto 1rem;
+  }
+  .messages-section {
+    height: 85%;
+  }
+  .app-header {
+    width: 70%;
+  }
+  .app-title {
+    font-size: 2rem;
+  }
+  .logo {
+    width: 30px;
+    height: 30px;
+  }
+  .online-members {
+    margin-left: -1rem;
+  }
+  .message-input {
+    width: 200px;
+  }
+  .history-messages {
+    margin-left: -1.5rem;
+  }
+  .message {
+    max-width: 250px;
+  }
+}
+@media (max-width: 480px) {
+  .online-member {
+    max-width: 50px;
+    word-wrap: break-word;
+  }
+  .chat-section {
+    width: 320px;
+    height: 300px;
+    margin: 1rem auto 1rem;
+  }
+  .messages-section {
+    height: 85%;
+  }
+  .app-header {
+    width: 70%;
+  }
+  .app-title {
+    font-size: 1.5rem;
+  }
+  .logo {
+    width: 25px;
+    height: 25px;
+  }
+  .members-num {
+    font-size: 0.8rem;
+  }
+  .online-members {
+    margin-left: -2rem;
+  }
+  .online-member {
+    font-size: 0.8rem;
+  }
+  .input-section {
+    height: 2.2rem;
+  }
+  .message-input {
+    width: 120px;
+    margin-left: 1rem;
+    font-size: 0.8rem;
+  }
+  .history-messages {
+    margin-left: -1.5rem;
+    font-size: 0.8rem;
+  }
+  .message {
+    max-width: 180px;
+    font-size: 0.8rem;
+  }
 }
